[package]
name = "slean"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.6"
thiserror="1.0.31"
mio = {"version"="0.8.4", features = ["net","os-poll"]}
socket2={"version"="0.4.4", features=["all"]}

slab = "0.4.6"
crossbeam="0.8.1"
byteorder="1.4.3"
rand="0.8.5"
ctrlc="3.2.2"
bytes="1.2.0"
rmp-serde="1.1.0"
serde="1.0.140"
arrayvec="0.7.2"


[dev-dependencies]
pretty_assertions = "1"
dotenv = "0.15.0"
env_logger = "0.9.0"
serde_derive="1.0.140"




