[package]
name = "slean"
version = "0.3.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.6"
thiserror="1.0.31"
mio = {"version"="0.8.4", features = ["net","os-poll"]}
socket2={"version"="0.4.4", features=["all"]}
slab = "0.4.6"

byteorder="1.4.3"
serde="1.0.140"
serde_derive="1.0.140"
rmp-serde="1.1.0"
bincode="1.3.3"

[dev-dependencies]
pretty_assertions = "1"
dotenv = "0.15.0"
env_logger = "0.9.0"
ctrlc="3.2.2"
hdrhistogram="7.5.0"


[[example]]
name = "echo-rq"
path = "examples/echo/echo-req.rs"

[[example]]
name = "echo-rp"
path = "examples/echo/echo-repl.rs"


[[example]]
name = "ping"
path = "examples/ping/ping-req.rs"

[[example]]
name = "pong"
path = "examples/ping/pong-repl.rs"


[[example]]
name = "calc-rq"
path = "examples/calc/calc-req.rs"

[[example]]
name = "calc-rp"
path = "examples/calc/calc-repl.rs"
